# Aletheia

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  profiler.rs  protocol.rs  results.rs
src/engine/: memory_engine.rs  mod.rs  operations.rs
src/runtime/: execution_policy.rs  executor.rs  mod.rs
src/workloads/: dataset_scan.rs  mod.rs  pointer_chase.rs  vector_add.rs  working_set_sweep.rs
viz/: perf_compare.py  plot_dataset_scaling.py  plot_hero.py  plot_stride_scan.py
